--- a/manuscript/Chapter3.Rmd
+++ b/manuscript/Chapter3.Rmd
@@ -11,59 +11,68 @@ comment: Copyright Mindy L. Mallory 2015
 
 # Introduction
 
-Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. If one considers the theory of supply and demand, the main role of the market is to find the value at which supply equals demand - or in other words, the value that 'clears the market'. 
-
-The estimated 'fundamental value' is simply a forecast, or expectation of, the market clearing price. The goal of any forecasting exercise is to compare the forecast (estimated fundamental value) to the current market price and make decisions accordingly. 
+Fundamental analysis is an assessment of price based on underlying supply and demand factors. Focusing on changes in the relationship between supply and demand allows one to calibrate an informed opinion of the value of the commodity. The main role of the market is to find the value at which supply equals demand - or in other words, the value that 'clears the market'. The estimated 'fundamental value' is simply a forecast, or expectation of, the market clearing price. The goal of any forecasting exercise is to compare the forecast (estimated fundamental value) to the current market price and make decisions accordingly. 
 
 > Bullish:  `Forecast > Price` \
 > Bearish: `Forecast < Price` 
 
 <a title="By Thomas Richter/user:THOMAS (Own work) [GFDL (http://www.gnu.org/copyleft/fdl.html) or CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABull_and_bear.jpg"><img width="128" alt="Bull and bear" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Bull_and_bear.jpg/128px-Bull_and_bear.jpg"/></a>                
 
-If your forecast is above the current market price, that is bullish because your forecast says the market is undervalueing the commodity - an opportunity to buy low and sell high! If your forecast is below the current market price, that is bearish becasue your forecast says the market is overvalueing the commodity - an opportunity to sell high and buy low! This of course only works if your forecast is correct, that is, the market eventually agrees and moves into line with your forecast. 
+If your forecast is above the current market price, that is bullish because your forecast implies the market is undervaluing the commodity - an opportunity to buy low and sell high! If your forecast is below the current market price, that is bearish because your forecast implies the market is overvaluing the commodity - an opportunity to sell high and buy low! This, of course, only works if your forecast is correct, that is, the market eventually agrees and moves into line with your forecast. 
 
 # Supply and Demand
 
-When conducing a fundamental analysis one does their best to take into account all the factors that determine supply, demand, and ultimately prices. Recall the basic supply and demand figures from chapter 1. They are the basic theoretical framework that will guild all of our modeling decisions. For grain markets we had two models: preplanting and post planting. 
+Conducing fundamental analyses involves taking into account all the factors that determine supply, demand, and ultimately, prices. Recall the supply and demand figures from chapter 1. They are the basic theoretical framework that will guild all of our modeling decisions. For grain markets we had two models: preplanting and post planting. 
 
 % Figures Here
 
 **Supply is Affected by:**
 
 - Acreage
-  - Prices of crops competing for acreage
-  - Pre-Plant Weather 
+    - Prices of crops competing for acreage
+    - Pre-Plant Weather 
 - Yield
-  - Post-Plant Weather
-
-
-  
-**Demand is Affected by:**
-
-- Consumer Income (this includes foreign income, since exports are a big compoent of demand)
-- Exchange Rates
+    - Post-Plant Weather
 - Government Policies
-- Foreign Production
 
 
 Acreage 
 
-:    Before planting, farmers plan how much acreage to devote to each commodity, thus determining the baseline expected production level. Before summer weather is revealed, expected production is simply `Acreage X Trend Yield`. In the Corn Belt, the relative prices of corn and soybeans play a large role in the farmer's decision. If futures prices indicate planting soybeans will be more profitable than planting corn, farmers will plan to devote more acres than usual to soybeans, for example. Weather can be an imporant determinant of acreage decisions as well. The most ardent planting intentions of a farmer can be derailed by persistent wet weather. An unusually rainy planting season can reduce planted acres from intentions. This is all to say that before the crop is actually in the ground, the supply of grain is relatively elastic. 
+:    Before planting, farmers plan how much acreage to devote to each commodity, thus determining the baseline expected production level. Before summer weather is revealed, expected production is simply `Acreage X Trend Yield`. In the Corn Belt, where planting decisions amount to deciding how to divide acres between corn and soybeans, their relative prices play a large role in the farmer's decision. If futures prices indicate planting soybeans will be more profitable than planting corn, farmers will plan to devote more acres than usual to soybeans, for example. Weather can be an important determinant of acreage decisions as well. The most ardent planting intentions of a farmer can be derailed by persistent wet weather. An unusually rainy planting season can reduce planted acres from intentions. Before the crop is actually in the ground, the supply of grain is relatively elastic. 
 
 Yield
 
-:   After the crop is planted, there is still considerable uncertainty related to how much the crop will yield; this is largely determined by weather during the growing season.
+:   After the crop is planted supply is quite inelastic, but there is still considerable uncertainty related to how much the crop will yield; this is largely determined by weather during the growing season.
+
+Government Policies
+
+:    The government has been heavily involved in Agriculture in the United States since the great depression of the 1930's. There have been programs that guarantee a minimum price, programs that guarantee minimum revenue, and various incarnations of crop insurance programs. Occasionally these favor the production of one type of crop over another. When this happens, farmers predictably respond by planting more of the crop treated more favorably by the program.   
+
+**Demand is Affected by:**
+
+- Consumer Income 
+- Exchange Rates
+
+
+
+Consumer Income
+
+:    This one is straight from economics 101. When people have more money, they will spend it on goods. This means increased demand for commodities and their derived products. This includes foreign income, since exports are a big component of demand for commodities in the United States. Rising incomes usually means rising consumption of meat, which increases the demand for commodities like corn, soybeans, and even wheat that are used as animal feed. 
+
+Exchange Rates
+
+:    Exchange rates also affect demand through their influence on exports. For example, if the U.S. dollar is weak, then consumers in other countries can buy dollars cheaply - giving them more purchasing power for goods denominated in dollars. 
 
 
 # Balance Sheet
 
-Most fundamental analysis relies on maintianing balance sheets of a commodity for a country, region, or the world. The approach is to maintain a careful accounting of how much supply exists and how much of the commodity has been used. Then through various means, one arrives at a price that will ration remaining supplies accross competing uses. 
+Most fundamental analyses rely on maintaining balance sheets of a commodity for a country, region, or the world. The approach is to maintain a careful accounting of how much supply exists and how much of the commodity has been used. Then through various means we will explore later, one arrives at a price that is expected to ration remaining supplies across competing uses. 
 
 ## The Marketing Year and Balance Sheet Forecasting Schedule
  
-Balance sheet analysis is often organized by marketing year. Since production happens, The marketing year begins with the first month the commodity is harvested and ends with the following year's harvest. The table below makes note the month on which marketing years begin for several crops.  
+Balance sheet analysis is often organized by marketing year. Since production happens once per year, the marketing year is defined to begin in the first month the commodity is harvested and ends with the following year's harvest. The table below makes note the month on which marketing years begin for several crops.  
 
-| Crop                    |  Begining of Marketing Year - First Month of Harvest |
+| Crop                    |  Beginning of Marketing Year - First Month of Harvest |
 |:------------------------|:-----------------------------------------------------|
 | Corn                    | September                                            |
 | Soybeans                | September                                            |
@@ -80,7 +89,7 @@ Forecasting supply and demand for any given marketing year begins well before ha
 | Fall 2015    | The first forecasts of supply and use based on , *trend forecasts*, *recent history*, *economic relationships*    |
 | Spring 2016  | Update supply forecasts based on USDA acreage surveys.                                                          |
 | Summer 2016  | Update supply forecasts based on weather and USDA crop and stocks reports                                       |
-| Fall 2016    | Update supply forecasts as yield uncertianty is resolved through harvest reports and USDA production reports    |
+| Fall 2016    | Update supply forecasts as yield uncertainty is resolved through harvest reports and USDA production reports    |
 | - Summer 2016| Continue to update supply forecasts based on USDA production revisions, southern hemisphere production, stocks, and use reports.  |
 
 : Table 2: Forecasting Calendar for 2016/2017 Marketing Year 
@@ -89,15 +98,71 @@ Forecasting supply and demand for any given marketing year begins well before ha
 > Production of corn, soybeans, and other commodities in the southern hemisphere (most notably in Brazil and Argintina) has grown rapidly over the last ten to fifteen years, and has impacted global commdity markets tremendously. Since southern hemisphere production occurs in the middle of marketing years organized by northern hemisphere harvest, there is an uncertain additional supply that must be forecast and updated to keep an accurate global balance sheet.  
 
 
+## Uncertainty 
+
+Even careful accounting of supply and demand factors that make up the balance sheet leaves a tremendous amount of uncertainty in the market.  Demand can be difficult to forecast, and can sometimes change dramatically. The USDA keeps careful track of stocks, but we only get stocks estimates once a quarter. Between *Grain Stocks* reports there is always a great deal of speculation as to the pace of consumption and whether we are eating into stocks at a faster or slower pace than expected. Analysts talk about whether the market is on pace to achieve the forecast level of ethanol crush, soybean crush, or exports. Surprises in any of these components can lead to rapid corrections in the commodity markets.  
+
+In the next few tables below, we outline the typical format for balance sheet analysis. 
+
+| Stocks and Use   |   | 
+|:-------------------|:--|
+|Beginning Stocks    |   | 
+| + Production       |   |
+| + Imports          |   |
+| **= Total Supply**     |   |
+|Domestic Consumption|    |
+| + Exports          |   |
+| + Residual          |   |
+| **= Total Consumption (Use)**     |   |
+| **Ending Stocks = Total Supply - Total Consumption**|    |
+
+: Table 3. Balance Sheet for a General Commodity
+
+Since the USDA makes regular reports on the balance sheet for commodities (the WASDE reports described in Chapter 2), most conducing private analyses with balance sheets use the USDA categories so that the USDA estimates can be taken as a benchmark. The supply side (Stocks) is relatively straightforward. Total stocks for the marketing year will be beginning stocks, the portion of last year's stocks that were not used up during the previous marketing year, plust this year's production, plus any imports of the commodity. Summing these three reveals the total amount of the commodity available for use during the marketing year. 
+
+- Beginning Stocks: Some production from the previous year usually remains into the next crop season. Carryover stocks function as a buffer against current year yield uncertainty. For example, if carryover stocks are high and current year yield is expected to be below trend, the market price may fall in response but modestly. However, if carryover stocks are low - resulting from several years of below trend production and strong demand - then an expected yield below trend will likely cause a volatile rise in prices.  
+
+| Stocks and Use   |   | 
+|:-------------------|:--|
+|Beginning Stocks    |   | 
+| + Production       |   |
+| + Imports          |   |
+| **= Total Supply**     |   |
+|Feed and Residual |    |
+| + Food, Seed, and Industrial |    |
+| + Ethanol  |    |
+| + Exports          |   |
+| **= Total Consumption (Use)**     |   |
+| **Ending Stocks = Total Supply - Total Consumption**|    |
+
+: Table 4. Balance Sheet for Corn
+
+The balance sheet for corn follows the same generic patter, but we can be a bit more specific with the use categories since we know what the major use catagories are for any given commodity. The use components are as follows: 
+<!-- Put percentages here? --> 
+
+- Feed and Residual: A large portion of the corn crop is used as feed for livestock (cattle, pigs, poultry).
+- Food, Seed, and Industrial: Corn is used to make tortilla chips, high fructose corn syrup, edible oil and other food items. A portion of the crop is grown specifically as seed for the next years crop. There are some industural uses for components of processed corn. Those are grouped in this category as well. 
+- Ethanol production also demands a significant amount of corn, so much that it gets its own category in the balance sheet. 
+- The final use category is export. Corn grown in the United States is consumed around the globe, and strength or weakness in the export market is a carefully component of demand. 
+
+| Stocks and Use   |   | 
+|:-------------------|:--|
+|Beginning Stocks    |   | 
+| + Production       |   |
+| + Imports          |   |
+| **= Total Supply**     |   |
+|Crush |    |
+| + Food, Seed, and Industrial |    |
+| + Exports          |   |
+| **= Total Consumption (Use)**     |   |
+| **Ending Stocks = Total Supply - Total Consumption**|    |
+
+: Table 5. Balance Sheet for Soybeans
+
+Describe soybeans here. 
 
 
 
-
-<!-- 
-Carryover Stocks
-
-:    Some production from the previous year usually remains into the next crop season. Carryover stocks function as a buffer against current year yield uncertainty. For example, if carryover stocks are high and current year yield is expected to be below trend, the market price may fall in response but modestly. However, if carryover stocks are low - resulting from several years of below trend production and strong demand - then an expected yield below trend will likely cause a volatile rise in prices.  
--->
 
 
 
