--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -11,3 +11,11 @@ publisher={CreateSpace Independent Publishing Platform}
   year={1991},
   publisher={Englewood Cliffs, NJ: Prentice Hall}
 }
+
+@manual{good2015balproj,
+  title={Balance Sheet Projections for the 2015-16 Corn Marketing Year},
+  author={Good, Darrel},
+  year={2015},
+  edition={farmdoc daily (5):23},
+  month={February}
+}
